src/styles/globals.css
/* ... */
.bathroom-main {
  width: 45vw;
  margin: auto;
  display: flex;
  flex-direction: column;
  gap: 15px;
}
.bathroom-main .bathroom-hea {
  color: #000;
  font-weight: 600;
  font-size: 46px;
  margin-bottom: 35px;
}

.bathroom-box-detail {
  display: flex;
  flex-direction: column;
  gap: 5px;
  padding: 12px 1px;
}
.bathroom-box-detail h6 {
  /* font-size: 20px; */
  font-size: 26px;
  color: #000;
  margin-top: 0px;
  margin-bottom: 0px;
}
.bathroom-box-detail p {
  font-size: 16px;
  color: #000;
  opacity: 0.6;
  margin-top: 0px;
  margin-bottom: 0px;
}
.stay-peoples {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 25px;
}
.bathroom-boxs {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.bathroom-box {
  border-radius: 50px;
  border: 2px solid #00000014;
  padding: 0px 32px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 45vw;
}
.stay-people-box {
  border-radius: 50px;
  border: 2px solid #00000014;
  padding: 10px 31px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 45vw;
}
.stay-main .stay-here-hea {
  color: #000;
  font-size: 26px;
  font-weight: 500;
  margin-bottom: 22px;
}
.stay-people-box p {
  color: #000000c4;
  font-size: 26px;
  font-weight: 500;
}
.stay-count-btn {
  background: #b493fe;
  border-radius: 50px;
  /* padding: 10px 15px; */
  border: 2px solid #9076cb;
  color: #fff;
  height: 48px;
  width: 48px;
}
.stay-people-box p {
  display: contents;
}
.describe-place-btn svg {
  height: 2.604vw;
  width: 2.604vw;
}
.about-place-right-images .right-top-1 > img {
  width: 190px;
}

.about-place-right-images .right-bottom-2 {
  position: absolute;
  right: -14px;
  bottom: -22px;
  rotate: 328deg;
}
.about-place-right-images .right-bottom-2 > img {
  width: 170px;
}
.easy-setps-prelease {
  display: flex;
  align-items: center;
  font-weight: bold;
  font-size: 28px;
}
.get-started-btn {
  border: none;
  padding: 13px 49px;
  border-radius: 27px;
  background: #b493fe;
  color: #fff;
  font-weight: bold;
  font-size: 20px;
}
/* loader */

.loader {
  width: 120px;
  height: 17px;
  -webkit-mask: radial-gradient(circle closest-side, #000 94%, #0000) left/20%
    100%;
  background: linear-gradient(#d80621 0 0) left/0% 100% no-repeat #fff;
  animation: l17 1s infinite steps(6);
  margin: auto;
}

@keyframes l17 {
  100% {
    background-size: 120% 100%;
  }
}

/* loader */

.toggle-button {
  display: inline-flex;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: unset;
  right: 1.3rem;
  cursor: pointer;
}

.eye-icon {
  width: 20px;
  height: 20px;
}

input[type="checkbox"] {
  position: relative;
  border: 2px solid #0000002f;
  border-radius: 5px;
  background: none;
  cursor: pointer;
  line-height: 0;
  margin: 0 0.6em 0 0;
  outline: 0;
  padding: 0 !important;
  vertical-align: text-top;
  height: 20px;
  width: 20px;
  -webkit-appearance: none;
  opacity: 0.5;
  background-repeat: no-repeat;
}

.content_area {
  width: 100%;
}

/* skelenton loader */

/* city loader */
.city_skeleton_main {
  display: flex;
  align-items: center;
  width: 100%;
  flex-wrap: wrap;
}

.skeleton-card {
  display: flex;
  flex-direction: column;
  /* flex-basis: 300px; */
  /* flex-shrink: 0; */
  /* flex-grow: 0; */
  background-color: #fff;
  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
  border-radius: 10px;
  overflow: hidden;
  margin: 1rem;
  height: 37vh;
  width: 100%;
  max-width: 31.5%;
  flex-basis: 100%;
  border-radius: 17px;
  /* width: calc(100% - 250px); */
  /* min-width: 240px; */
}

.card-img {
  padding-bottom: 40%;
  position: relative;
}

.card-img img {
  position: absolute;
  width: 100%;
}

.card-title {
  font-size: 1.25rem;
  line-height: 1.33;
  font-weight: 700;
}

.card-title.skeleton {
  min-height: 28px;
  border-radius: 4px;
}

.card-intro {
  margin-top: 0.75rem;
  line-height: 1.5;
}

.card-intro.skeleton {
  min-height: 72px;
  border-radius: 4px;
}

.skeleton {
  background-color: #e2e5e7;
  background-image: linear-gradient(
    90deg,
    rgba(255, 255, 255, 0),
    rgba(255, 255, 255, 0.5),
    rgba(255, 255, 255, 0)
  );
  background-size: 40px 100%;
  background-repeat: no-repeat;
  background-position: left -40px top 0;
  animation: shine 1s ease infinite;
}

@keyframes shine {
  to {
    background-position: right -40px top 0;
  }
}

/* city loader */
/* skelenton loader */

/* place loaser */

.place_skeleton_main {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin: auto;
}

.place_skeleton-card {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
  overflow: hidden;
  width: 100%;
  border-radius: 17px;
}

.place-card-img {
  /* padding-bottom: 40%; */
  position: relative;
  aspect-ratio: 1 / 1;
}

.place-card-img img {
  position: absolute;
  width: 100%;
}
.place-card-intro {
  margin-top: 0.75rem;
  line-height: 1.5;
}

.place-card-intro.skeleton {
  min-height: 48px;
  border-radius: 4px;
}

input[type="checkbox"]:hover {
  opacity: 1;
}

input[type="checkbox"]:checked {
  background-color: #000;
  opacity: 1;
}

input[type="checkbox"]:before {
  content: "";
  position: absolute;
  right: 56%;
  top: 50%;
  width: 4px;
  height: 10px;
  border: solid #fff;
  border-width: 0 2px 2px 0;
  margin: -1px -1px 0 -1px;
  transform: rotate(45deg) translate(-50%, -50%);
  z-index: 2;
}

.forget_row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: 0 1rem;
}

.rem-check {
  margin: 0 !important;
}

.rem-check label {
  color: #272727;
  font-size: 20px;
  font-weight: 500;
  line-height: 1;
  margin: 0;
  cursor: pointer;
}

.rem-check label::selection {
  background: none;
}

.forget_row a {
  color: #272727;
  font-size: 20px;
  font-weight: 500;
  line-height: 1;
  margin: 0;
  text-decoration: none;
}
/* ... */

